--- a/app/src/main/res/menu/menu_task_list.xml
+++ b/app/src/main/res/menu/menu_task_list.xml
@@ -1,5 +1,10 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".TaskListActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" android:showAsAction="never" />
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".TaskListActivity">
+    <item
+        android:id="@+id/action_sync"
+        android:title="@string/action_sync"
+        android:orderInCategory="100"
+        android:showAsAction="never" />
 </menu>
