--- a/app/src/main/res/menu/menu_task_list.xml
+++ b/app/src/main/res/menu/menu_task_list.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".TaskListActivity">
     <item
+        android:id="@+id/action_clear_file"
+        android:title="Clear File"
+        android:orderInCategory="50"
+        android:showAsAction="always" />
+    <item
         android:id="@+id/action_sync"
         android:title="@string/action_sync"
         android:orderInCategory="100"
