--- a/app/src/main/res/layout/fragment_task_details.xml
+++ b/app/src/main/res/layout/fragment_task_details.xml
@@ -4,7 +4,10 @@
     tools:context="com.doctorandonuts.taskchampion.TaskDetailsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment"
+        android:id="@+id/hello"/>
 
 </FrameLayout>
