--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -6,15 +6,24 @@
 
 
     <TextView
-        android:id="@+id/firstLine"
+        android:id="@+id/description"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_alignWithParentIfMissing="true"
         android:gravity="center_vertical"
-        android:text="Example application"
-        android:textSize="16sp"
+        android:textSize="15sp"
         android:textColor="#000000"/>
+    <TextView
+        android:id="@+id/urgency"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignWithParentIfMissing="true"
+        android:gravity="center_vertical"
+        android:textSize="12sp"
+        android:textColor="#666666"/>
 
 </RelativeLayout>
