--- a/app/src/main/res/menu/menu_task_details.xml
+++ b/app/src/main/res/menu/menu_task_details.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu>
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".TaskListActivity">
 
+    <item
+        android:id="@+id/action_done"
+        android:title="@string/action_done"
+        android:orderInCategory="50"
+        android:showAsAction="always" />
 </menu>
