--- a/app/src/main/res/menu/menu_task_list.xml
+++ b/app/src/main/res/menu/menu_task_list.xml
@@ -10,6 +10,11 @@
         android:orderInCategory="50"
         android:showAsAction="always" />
     <item
+        android:id="@+id/action_filter_tags"
+        android:title="@string/action_filter_tags"
+        android:orderInCategory="75"
+        android:showAsAction="never" />
+    <item
         android:id="@+id/action_sync"
         android:title="@string/action_sync"
         android:orderInCategory="100"
