--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -8,7 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:text="Context: None"
-        android:id="@+id/contextTextView"/>
+        android:id="@+id/contextTextView"
+        android:background="#424242"
+        android:textColor="#f5f5f5"/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
