I think context work now, I just need to test and maybe add a textview above listView that shows the current filter

--- a/app/src/main/res/menu/menu_task_list.xml
+++ b/app/src/main/res/menu/menu_task_list.xml
@@ -10,8 +10,8 @@
         android:orderInCategory="50"
         android:showAsAction="always" />
     <item
-        android:id="@+id/action_filter_tags"
-        android:title="@string/action_filter_tags"
+        android:id="@+id/action_set_context"
+        android:title="@string/action_set_context"
         android:orderInCategory="75"
         android:showAsAction="never" />
     <item
