--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -10,7 +10,8 @@
         android:id="@+id/description"
         android:layout_width="fill_parent"
         android:layout_height="35dp"
-        android:textSize="15sp"
+        android:textSize="20sp"
+        android:singleLine="true"
         android:textColor="#000000"/>
     <TextView
         android:id="@+id/urgency"
