--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -13,12 +13,24 @@
         android:textSize="20sp"
         android:singleLine="true"
         android:textColor="#000000"/>
-    <TextView
-        android:id="@+id/urgency"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:gravity="right"
-        android:textColor="#666666"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="16dp">
+        <TextView
+            android:id="@+id/project"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="12sp"
+            android:layout_alignParentStart="true"
+            android:textColor="#bbbbbb"/>
+        <TextView
+            android:id="@+id/urgency"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="12sp"
+            android:layout_alignParentEnd="true"
+            android:textColor="#bbbbbb"/>
+    </RelativeLayout>
+
 
 </LinearLayout>
