--- a/app/src/main/res/layout/fragment_task_details.xml
+++ b/app/src/main/res/layout/fragment_task_details.xml
@@ -17,6 +17,7 @@
             android:text="Description"
             android:id="@+id/descriptionText"
             android:textStyle="bold"
+            android:onClick="editDescription"
             android:layout_margin="10dp"/>
 
         <View style="@style/Divider"/>
