Added a divider between description and other details.  Also made it a style so it is reuseable.

--- a/app/src/main/res/layout/fragment_task_details.xml
+++ b/app/src/main/res/layout/fragment_task_details.xml
@@ -17,6 +17,8 @@
             android:text="Description"
             android:id="@+id/descriptionText" />
 
+        <View style="@style/Divider"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="35dp">
